All mouse events after a right click are ignored when they came from WebkitTestRunner https://bugs.webkit.org/show_bug.cgi?id=77350

Patch by Hugo Parente Lima <hugo.lima@openbossa.org> on 2012-02-28
Reviewed by Chang Shu.

Source/WebKit2:

Never ignore mouse events when using sync events, even if the context menu is being
show but the Ui did replied the ShowContextMenu event with a ContextMenuHidden.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mouseEventSyncForTesting):

LayoutTests:

Unskip fast/events/mouse-click-events.html.

* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/96927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109169 268f45cc-cd09-0410-ab3c-d52691b4dbfc